# pico_wather_station

./: .env.template  .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
.cargo/: config.toml
docs/: Pico-ResTouch-LCD-3.5 - Waveshare Wiki.mhtml
src/: display.rs  fmtbuf.rs  main.rs  model.rs  webapi.rs
