[package]
name = "pico_weather_station"
version = "0.1.0"
edition = "2021"

[features]
default = ["debug"]
debug = [
    "dep:defmt", "dep:defmt-rtt", "dep:panic-probe",
    "embassy-embedded-hal/defmt",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-rp/defmt",
    "embassy-net/defmt",
    "cyw43/defmt",
    "cyw43/firmware-logs",
    "cyw43-pio/defmt",
    "reqwless/defmt",
    "serde-json-core/defmt",
    "embedded-io-async/defmt-03",
    "bt-hci/defmt",
    "trouble-host/defmt",
]
release = ["dep:panic-reset"]

[dependencies]
embedded-alloc = "0.6.0"
u8g2-fonts = { version = "0.6.0", features = ["embedded_graphics_textstyle"] }
micromath = "2.1.0"

# st7735-embassy = { path = "/home/dlj/github/st7735-embassy" }
# ili9488-rs replaced by custom driver for Waveshare shift register interface
# mipidsi = "0.10.0"
embassy-embedded-hal = { version = "0.2.0" }
embassy-sync = { version = "0.6.0" }
embassy-executor = { version = "0.6.1", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.2" }
embassy-rp = { version = "0.2.0", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "proto-ipv4",
    "proto-ipv6",
    "multicast",
] }
embassy-futures = { version = "0.1.0" }
cyw43 = { version = "0.2.0" }
cyw43-pio = { version = "0.2.0" }


defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
fixed = "1.23.1"
fixed-macro = "1.2"

# for web request example
reqwless = { version = "0.13.0" }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6.0" }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1", optional = true }
# display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
# st7789 = "0.6.1"
# display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
heapless = "0.8"

embedded-hal = "1.0.0"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1" }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
embedded-sdmmc = "0.7.0"

bt-hci = { version = "0.1.0", default-features = false }
trouble-host = { version = "0.1.0", features = ["gatt"] }

[build-dependencies]
dotenv = "0.15.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[patch.crates-io]
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "4b8c0f499b34e46ca23a56e2d1640ede371722cf" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
# embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
# embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy.git", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
# embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
